--- a/Assets/UI/USS/GameOverStyle.uss
+++ b/Assets/UI/USS/GameOverStyle.uss
@@ -23,3 +23,10 @@
     -unity-text-outline-width: 10px;
     -unity-text-outline-color: rgb(0, 0, 0);
 }
+
+.small-label-ingame {
+    position: absolute;
+    font-size: 50px;
+    -unity-font: url('project://database/Assets/Prefabs/UI/Fonts/GlitchGoblin-2O87v.ttf?fileID=12800000&guid=5c53f7ccd633bf54dbaf7802211a6450&type=3#GlitchGoblin-2O87v');
+    -unity-font-definition: initial;
+}
