Fixes on UI feature

--- a/Assets/UI/USS/GamePause.uss
+++ b/Assets/UI/USS/GamePause.uss
@@ -1,9 +1,9 @@
-.puase-menu-buttons {
+.pause-menu-buttons {
     width: 550px;
     height: 175px;
 }
 
-.puase-menu-buttons:hover {
+.pause-menu-buttons:hover {
     rotate: -10deg;
     transition-duration: 0.3s;
 }
