--- a/Assets/UI/USS/GameOverStyle.uss
+++ b/Assets/UI/USS/GameOverStyle.uss
@@ -1,12 +1,9 @@
-.retry {
-}
-
-.retry-button {
+gameoverbuttons {
     font-size: 20px;
     -unity-font: url('project://database/Assets/Art/Fonts/Dimitri/DIMITRI_.TTF?fileID=12800000&guid=5e34799af4245a24fa664895c5dc5889&type=3#DIMITRI_');
 }
 
-.retry-button:hover {
+.game-over-buttons:hover {
     font-size: 70px;
     color: rgb(255, 255, 255);
     rotate: -10deg;
@@ -16,13 +13,17 @@
 
 .game-over-text {
     font-size: 200px;
-    color: rgb(255, 0, 0);
-    -unity-font: url('project://database/Assets/Prefabs/UI/Fonts/GlitchGoblin-2O87v.ttf?fileID=12800000&guid=5c53f7ccd633bf54dbaf7802211a6450&type=3#GlitchGoblin-2O87v');
-    -unity-font-definition: initial;
-    -unity-text-align: upper-center;
-    white-space: normal;
-    -unity-text-outline-width: 10px;
-    -unity-text-outline-color: rgb(0, 0, 0);
+    color: rgb(0, 255, 0);
+    font-family: "YourCyberpunkFont", sans-serif;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    margin: 0;
+    padding: 20px;
+    text-shadow: 0 0 10px rgba(0, 255, 0, 0.8);
+    background-color: rgb(0, 0, 0);
+    border: 2px solid rgb(0, 255, 0);
+    border-radius: 10px;
 }
 
 .small-label-ingame {
@@ -30,4 +31,8 @@
     font-size: 50px;
     -unity-font: url('project://database/Assets/Prefabs/UI/Fonts/GlitchGoblin-2O87v.ttf?fileID=12800000&guid=5c53f7ccd633bf54dbaf7802211a6450&type=3#GlitchGoblin-2O87v');
     -unity-font-definition: initial;
+    -unity-text-align: upper-left;
+    -unity-text-outline-color: rgb(0, 0, 0);
+    -unity-text-outline-width: 3px;
+    padding-right: 0;
 }
